tests/baselines/reference/sourceMapValidationLabeled.errors.txt
sourceMapValidationLabeled.ts(1,1): error TS1344: 'A label is not allowed here.


==== sourceMapValidationLabeled.ts (1 errors) ====
    x:
    ~
!!! error TS1344: 'A label is not allowed here.
    var b = 10;